# ox3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  compile.bat  msvcBuild.bat  ox3d.sln  run.bat  unixBuild.sh  winBuild.bat
BACKUP IMPORTANT/components/: camera.h
BACKUP IMPORTANT/core/: core.h  graphicsManager.h  window.cpp
BACKUP IMPORTANT/input/: keyboard.h
BACKUP IMPORTANT/managers/: resourceManager.cpp  resourceManager.h
BACKUP IMPORTANT/rendering/: mesh.h  model.cpp  shader.cpp  shader.h  texture2D.cpp  uniformBufferObject.h
BACKUP IMPORTANT/ui/: uiLabel.h
CMake/: Utilities.cmake
Dependencies/PDFium/include/pdfium/: fpdfview.h
Dependencies/PDFium/lib/: pdfium.lib
Teleservice/: Teleservice.aps  Teleservice.rc  ox3d.vcxproj  ox3d.vcxproj.filters  resource.h
Teleservice/Debug/: Teleservice.exe.recipe  vc142.idb
Teleservice/Debug/Teleservice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Teleservice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Teleservice/resources/models/: cuberino.glb.gltf  pos.gltf
Teleservice/resources/shaders/: lighting_shader.frag  lighting_shader.vert
Teleservice/src/: Main.cpp
Teleservice/src/core/: Application.cpp  Application.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Teleservice/src/data/: Mesh.cpp  Mesh.h  Vertex.h
Teleservice/src/math/: Math.cpp  Math.h  Matrix4x4.cpp  Matrix4x4.h  Vector3D.h
Teleservice/src/rendering/: ExtendedWindowStyle.h  Renderer.cpp  Renderer.h  Renderer2D.h  RenderingAPI.h  Shader.cpp  Shader.h  ShaderType.h  WindowClassStyle.h  WindowStyle.h
Teleservice/src/ui/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Control.cpp  Control.h  Label.cpp  Label.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  TextBox.cpp  TextBox.h
Teleservice/src/windows/: DebtorRegistryWindow.cpp  DebtorRegistryWindow.h  MainWindow.cpp  MainWindow.h  RenderingWindow.cpp  RenderingWindow.h
Teleservice/x64/Debug/: Teleservice.exe.recipe  vc142.idb
Teleservice/x64/Debug/Teleservice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Teleservice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
Teleservice/x64/Release/: Teleservice.exe.recipe  Teleservice.res
Teleservice/x64/Release/Teleservice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Teleservice.lastbuildstate  Teleservice.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
abuild/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
abuild/oxcart/: Makefile  cmake_install.cmake
abuild/sandbox/: Makefile  cmake_install.cmake
assets/models/: cube.gltf
assets/models/plane/: plane.gltf
assets/shaders/: lightingShader.frag  lightingShader.frag.spv  lightingShader.vert  lightingShader.vert.spv  pointLight.frag  pointLight.frag.spv  pointLight.vert  pointLight.vert.spv
dependencies/assimp/windows/lib-vc2019/: assimp-vc142-mt.exp  assimp-vc142-mt.lib
dependencies/assimp/windows/lib-vc2022/: assimp.lib
dependencies/freetype/macOS/: INSTALL_RECEIPT.json
dependencies/freetype/macOS/lib/: libfreetype.dylib
engine/: CMakeLists.txt
engine/src/: main.h  main.hpp
engine/src/components/: camera.cpp  camera.hpp  component.hpp  transform.hpp
engine/src/core/: application.cpp  application.hpp  core.h  window.cpp  window.h  window.hpp
engine/src/data/: entity.cpp  entity.hpp
engine/src/input/: keyCode.h  keyboard.cpp  keyboard.hpp  keycode.hpp  mouse.cpp  mouse.h  mouse.hpp
engine/src/rendering/: graphicsDevice.cpp  graphicsDevice.hpp  graphicsPipeline.cpp  graphicsPipeline.hpp  mesh.hpp  model.cpp  model.h  model.hpp  renderSystem.cpp  renderSystem.hpp  renderer.cpp  renderer.hpp  shader.cpp  swapChain.cpp  swapChain.hpp  texture2D.h  vertex.h
engine/src/ui/: uiFont.h
oxcart/: CMakeLists.txt
oxcart/src/oxcart/: main.hpp  oxcart.hpp
oxcart/src/oxcart/components/: camera.cpp  camera.hpp  component.hpp  light.cpp  light.hpp  transform.hpp
oxcart/src/oxcart/core/: application.cpp  application.hpp  core.hpp  window.cpp  window.hpp
oxcart/src/oxcart/data/: entity.cpp  entity.hpp
oxcart/src/oxcart/input/: keyboard.cpp  keyboard.hpp  keycode.hpp  mouse.cpp  mouse.hpp
oxcart/src/oxcart/rendering/: buffer.cpp  buffer.hpp  descriptors.cpp  descriptors.hpp  frameInfo.hpp  graphicsDevice.cpp  graphicsDevice.hpp  graphicsPipeline.cpp  graphicsPipeline.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderSystem.cpp  renderSystem.hpp  renderer.cpp  renderer.hpp  swapChain.cpp  swapChain.hpp  texture.cpp  texture.hpp
oxcart/src/oxcart/rendering/2d/: renderer2d.cpp  renderer2d.hpp
oxcart/src/oxcart/rendering/systems/: pointLightSystem.cpp  pointLightSystem.hpp  renderSystem.cpp  renderSystem.hpp
oxcart/src/oxcart/ui/: imguiLayer.cpp  imguiLayer.hpp
sandbox/: CMakeLists.txt
sandbox/src/: sandbox.cpp
shaders/: lightingShader.frag  lightingShader.vert  lightingShader.vert.spv
src/: main.cpp  resources.h  resources.rc  resources.res  window.cpp  window.h
src/components/: camera.cpp  camera.h
src/core/: graphicsManager.cpp  graphicsManager.h  window.cpp  window.h
src/input/: keyCode.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/managers/: resourceManager.cpp  resourceManager.h
src/rendering/: mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture2D.cpp  texture2D.h  uniformBufferObject.h  vertex.h
src/ui/: uiFont.cpp  uiFont.h  uiLabel.h
vsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ox3d.sln  ox3d.vcxproj  ox3d.vcxproj.filters
vsbuild/Debug/: ox3d.ilk
vsbuild/assets/shaders/: lightingShader.vert
vsbuild/ox3d.dir/Debug/: ox3d.exe.recipe
vsbuild/ox3d.dir/Debug/ox3d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  (+6 more)
x64/Release/: Teleservice.iobj  Teleservice.ipdb  Teleservice.lnk
(+5 files in other folders)
